--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@zegocloud/zego-uikit-prebuilt": "^1.8.10",
     "axios": "^1.4.0",
     "connected-react-router": "^6.9.3",
     "firebase": "^10.1.0",
