--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reacticons/ionicons": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rive-app/react-canvas": "^4.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,13 +16,16 @@
     "@zegocloud/zego-uikit-prebuilt": "^1.8.10",
     "axios": "^1.4.0",
     "connected-react-router": "^6.9.3",
+    "daisyui": "^3.5.1",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.1",
     "history": "^5.3.0",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
